# architecture

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: android.yml  windows.yml
algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h
test/: CMakeLists.txt  algorithm_test.cpp
